--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <h2>JOGO DA MEMÓRIA</h2>
+    <h2 class="gradient-text">JOGO DA MEMÓRIA</h2>
     <div class="game"></div>
     <button class="reset" onclick="window.location.reload()">RESET GAME</button>
   </div>
